fix alignment

--- a/assets/css/card.css
+++ b/assets/css/card.css
@@ -28,6 +28,9 @@ ul li:before {
 .card-item{
     border: 2px solid #666;
     border-radius: 20px;
+    display: flex;
+    flex-direction: column;
+
 }
 .card-header{
     align-text: center;
@@ -59,6 +62,10 @@ ul li:before {
 }
 .card-info{
     padding: 0px 20px 20px 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
 }
 .author{
     margin: 0.2em;
@@ -95,6 +102,7 @@ ul li:before {
 .requirements-info{
     border-bottom: 1px solid black;
     margin-top: .5em;
+    flex-grow: 1;
 }
 i{
     margin-right: 5px;
@@ -112,8 +120,8 @@ i{
 }
 .buttons-wrp{
     display: flex;
-    justify-content: flex-end;
     margin-top: .3em;
+    justify-content: flex-end;
 }
 .details-btn, .apply-btn{
     margin: 2px;
